--- a/public/style/screen.less
+++ b/public/style/screen.less
@@ -1,11 +1,16 @@
 /* Variables */
 @pageMV: 50px;
+@importantC: #c43c35;
 
 /* Open Sans font */
 @import url('http://fonts.googleapis.com/css?family=Open+Sans:300,400&subset=latin,cyrillic');
 
 * {
 	margin: 0;
+}
+
+a.important {
+	color: @importantC;
 }
 
 body, label, input, select, textarea, .btn .close, .alert-message .close {
@@ -25,6 +30,7 @@ div#logo {
 	font-family: 'Open Sans';
 	font-size: 4em;
 	font-weight: 300;
+	margin-top: 0.115em;
 }
 
 div#description {
