--- a/app/views/risk.html
+++ b/app/views/risk.html
@@ -2,12 +2,26 @@
 
 <div class='container'>
 	<div class='row'>
-		<div class='span15'>
+		<div class='span4'>
 			<div id='logo'>&{'project.name'}</div>
 		</div>
-		<div class='span1'>
-			<a href='@{HomeController.logout()}'>&{'action.logout'}</a>
+		<div class='span12'>
+			<ul id='menu-selector' class='pills'>
+				<li#{if 'main' == request.actionMethod} class='active'#{/if}><a href='@{RiskController.main()}'>&{'menu.main'}</a></li>
+				<li#{if 'context' == request.actionMethod} class='active'#{/if}><a href='@{RiskController.context()}'>&{'menu.context'}</a></li>
+				<li#{if 'id' == request.actionMethod} class='active'#{/if}><a href='@{RiskController.id()}'>&{'menu.id'}</a></li>
+				<li#{if 'analysis' == request.actionMethod} class='active'#{/if}><a href='@{RiskController.analysis()}'>&{'menu.analysis'}</a></li>
+				<li#{if 'evaluation' == request.actionMethod} class='active'#{/if}><a href='@{RiskController.evaluation()}'>&{'menu.evaluation'}</a></li>
+				<li#{if 'treatment' == request.actionMethod} class='active'#{/if}><a href='@{RiskController.treatment()}'>&{'menu.treatment'}</a></li>
+				<li#{if 'acceptance' == request.actionMethod} class='active'#{/if}><a href='@{RiskController.acceptance()}'>&{'menu.acceptance'}</a></li>
+			</ul>
 		</div>
+	</div>
+</div>
+
+<div class='container'>
+	<div class='row'>
+		<div class='offset1'><a class='important' href='@{HomeController.logout}'>&{'action.logout'}</a></div>
 	</div>
 </div>
 
