--- a/app/views/risk.html
+++ b/app/views/risk.html
@@ -19,10 +19,12 @@
 	</div>
 </div>
 
+#{doLayout/}
+
+<hr/>
+
 <div class='container'>
 	<div class='row'>
-		<div class='offset1'><a class='important' href='@{HomeController.logout}'>&{'action.logout'}</a></div>
+		<div class='span16 right'><a class='btn' href='@{HomeController.logout}'>&{'action.logout'}</a></div>
 	</div>
 </div>
-
-#{doLayout/}
