Several under-the-hood style improvements

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,9 +1,9 @@
 #{extends 'template.html'/}
-<div id='home-container' class='container'>
+<div class='container top-shift'>
     <div class='row'>
         <div class='span8'>
-			<div id='logo'>&{'project.name'}</div>
-	        <div id='description'>&{'project.description'}</div>
+			<h1 class='logo'>&{'project.name'}</h1>
+	        <h1>&{'project.description'}</h1>
         </div>
 		<div class='span8'>
 			<ul id='form-selector' class='pills input-shift' data-pills='pills'>
