--- a/app/views/RiskController/context.html
+++ b/app/views/RiskController/context.html
@@ -1,7 +1,7 @@
 #{extends 'risk.html'/}
 #{set title:messages.get('project.name')/}
 
-<div class='container content'>
+<div class='container'>
 	<div class='row'>
 		<div class='span16'>
 			<h1>&{'page.context.criteria.title'}</h1>
@@ -11,19 +11,19 @@
 					#{list items:criteria, as:'criterion'}
 					<tr>
 						<td width='50%'>${criterion.name}</td>
-						<td width='15%'>
+						<td>
 							#{if criterion.evaluation}<a href='@{RiskController.setCriterionEvaluation(criterion.id,false)}'>&{'form.criteria.evaluation'}</a>#{/if}
 							#{else}<a class='disabled' href='@{RiskController.setCriterionEvaluation(criterion.id,true)}'>&{'form.criteria.evaluation'}</a>#{/else}
 						</td>
-						<td width='15%'>
+						<td>
 							#{if criterion.impact}<a href='@{RiskController.setCriterionImpact(criterion.id,false)}'>&{'form.criteria.impact'}</a>#{/if}
 							#{else}<a class='disabled' href='@{RiskController.setCriterionImpact(criterion.id,true)}'>&{'form.criteria.impact'}</a>#{/else}
 						</td>
-						<td width='15%'>
+						<td>
 							#{if criterion.acceptance}<a href='@{RiskController.setCriterionAcceptance(criterion.id,false)}'>&{'form.criteria.acceptance'}</a>#{/if}
 							#{else}<a class='disabled' href='@{RiskController.setCriterionAcceptance(criterion.id,true)}'>&{'form.criteria.acceptance'}</a>#{/else}
 						</td>
-						<td class='tail' width='5%'><a class='danger' href='@{RiskController.deleteCriterion(criterion.id)}'>&{'form.criteria.delete'}</a></td>
+						<td><a class='danger' href='@{RiskController.deleteCriterion(criterion.id)}'>&{'form.criteria.delete'}</a></td>
 					</tr>
 					#{/list}
 				</tbody>
