--- a/app/views/risk.html
+++ b/app/views/risk.html
@@ -1,19 +1,19 @@
 #{extends 'template.html'/}
 
-<div class='container'>
+<div class='container menu'>
 	<div class='row'>
 		<div class='span4'>
-			<div id='logo'>&{'project.name'}</div>
+			<h1 class='logo'>&{'project.name'}</h1>
 		</div>
-		<div class='span12'>
-			<ul id='menu-selector' class='pills'>
-				<li#{if 'main' == request.actionMethod} class='active'#{/if}><a href='@{RiskController.main()}'>&{'menu.main'}</a></li>
-				<li#{if 'context' == request.actionMethod} class='active'#{/if}><a href='@{RiskController.context()}'>&{'menu.context'}</a></li>
-				<li#{if 'id' == request.actionMethod} class='active'#{/if}><a href='@{RiskController.id()}'>&{'menu.id'}</a></li>
-				<li#{if 'analysis' == request.actionMethod} class='active'#{/if}><a href='@{RiskController.analysis()}'>&{'menu.analysis'}</a></li>
-				<li#{if 'evaluation' == request.actionMethod} class='active'#{/if}><a href='@{RiskController.evaluation()}'>&{'menu.evaluation'}</a></li>
-				<li#{if 'treatment' == request.actionMethod} class='active'#{/if}><a href='@{RiskController.treatment()}'>&{'menu.treatment'}</a></li>
+		<div class='span12 right'>
+			<ul class='pills'>
 				<li#{if 'acceptance' == request.actionMethod} class='active'#{/if}><a href='@{RiskController.acceptance()}'>&{'menu.acceptance'}</a></li>
+				<li#{if 'treatment' == request.actionMethod} class='active'#{/if}><a href='@{RiskController.treatment()}'>&{'menu.treatment'}</a></li>
+				<li#{if 'evaluation' == request.actionMethod} class='active'#{/if}><a href='@{RiskController.evaluation()}'>&{'menu.evaluation'}</a></li>
+				<li#{if 'analysis' == request.actionMethod} class='active'#{/if}><a href='@{RiskController.analysis()}'>&{'menu.analysis'}</a></li>
+				<li#{if 'id' == request.actionMethod} class='active'#{/if}><a href='@{RiskController.id()}'>&{'menu.id'}</a></li>
+				<li#{if 'context' == request.actionMethod} class='active'#{/if}><a href='@{RiskController.context()}'>&{'menu.context'}</a></li>
+				<li#{if 'main' == request.actionMethod} class='active'#{/if}><a href='@{RiskController.main()}'>&{'menu.main'}</a></li>
 			</ul>
 		</div>
 	</div>
