--- a/app/views/RiskController/main.html
+++ b/app/views/RiskController/main.html
@@ -1,3 +1,10 @@
 #{extends 'risk.html'/}
 #{set title:messages.get('project.name')/}
 
+<div class='container'>
+	<div class='row'>
+		<dov class='span16'>
+			<h1>${scope.name}</h1>
+		</dov>
+	</div>
+</div>
