--- a/app/views/template.html
+++ b/app/views/template.html
@@ -6,9 +6,9 @@
         <link rel='stylesheet' type='text/css' media='screen' href='@{'/public/style/bootstrap.min.css'}'/>
         <link rel='stylesheet/less' type='text/css' media='screen' href='@{'/public/style/screen.less'}'/>
 	    <link rel='shortcut icon' type='image/png' href='@{'/public/image/visualpharm/umbrella.png'}'/>
+	    <script type='text/javascript' src='@{'/public/js/bootstrap/bootstrap-tabs.js'}'></script>
 	    <script type='text/javascript' src='@{'/public/js/less/less-1.2.0.min.js'}'></script>
 	    <script type='text/javascript' src='@{'/public/js/jquery/jquery-1.7.1.min.js'}'></script>
-	    <script type='text/javascript' src='@{'/public/js/bootstrap/bootstrap-tabs.js'}'></script>
 	    <script type='text/javascript' src='@{'/public/js/jquery/jquery.inputhints.min.js'}'></script>
     </head>
     <body>
@@ -17,6 +17,14 @@
         <script type='text/javascript'>
 	        $(document).ready(function() {
 		        $('input[title]').inputHints();
+
+		        $('textarea').keydown(function(e) {
+			        if (13 == e.keyCode && true != e.shiftKey) {
+					    $(this).parents('form:first').submit();
+
+				        return false;
+			        }
+		        });
 	        });
         </script>
     </body>
