Fully-functional asset identification

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -2,7 +2,7 @@
 <div class='container top-shift'>
     <div class='row'>
         <div class='span8'>
-			<h1 class='logo'>&{'project.name'}</h1>
+			<span class='logo'>&{'project.name'}</span>
 	        <h1>&{'project.description'}</h1>
         </div>
 		<div class='span8'>
