--- a/public/style/screen.less
+++ b/public/style/screen.less
@@ -68,6 +68,7 @@ table tr:first-child {
 
 table td.tail {
 	text-align: right;
+	white-space: nowrap;
 }
 
 ul.input-shift {
@@ -93,6 +94,7 @@ form .text-input {
 
 .modal {
 	top: 280px;
+	max-height: 600px;
 }
 
 .modal-body {
