Control identification, JPA relations reworked, a bit of impact identification

--- a/app/views/RiskController/idThreat.html
+++ b/app/views/RiskController/idThreat.html
@@ -155,7 +155,7 @@
 
 <div id='threat-modal' class='modal hide'>
 	<div class="modal-body">
-		#{form @RiskController.bindToAsset()}
+		#{form @RiskController.bindThreatToAsset()}
 		<input type="hidden" name="threatId"/>
 
 		<h2>&{'page.id.asset.supporting.hardware'}</h2>
